# AISExplorer

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: publish_to_pypi.yml  python-package.yml
ais_explorer/: AIS.py  Exceptions.py
ais_explorer/.ipynb_checkpoints/: Short_Example-checkpoint.ipynb
aisexplorer/: AIS.py  Exceptions.py  Filters.py  Proxy.py  __init__.py
aisexplorer/Utils/: Utility.py
examples/: Short_Example.ipynb
examples/.ipynb_checkpoints/: Short_Example-checkpoint.ipynb  Untitled-checkpoint.ipynb
tests/: __init__.py  test_ais.py  test_ais_explorer.py  test_filters.py  test_proxies.py
