[tool.poetry]
name = "AISExplorer"
version = "0.0.1"
description = "Wrapper to fetch data from marinetraffic"
readme = "README.md"
homepage = "https://github.com/reyemb/AISExplorer"
repository = "https://github.com/reyemb/AISExplorer"
keywords = ["AIS", "Vessel", "Shiptracking"]
authors = ["reyemb <reyemb.coding@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
readme-renderer = "^30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
