[tool.poetry]
name = "AISExplorer"
version = "0.2.2"
description = "Wrapper to fetch data from marinetraffic"
readme = "README.md"
homepage = "https://github.com/reyemb/AISExplorer"
repository = "https://github.com/reyemb/AISExplorer"
keywords = ["AIS", "Vessel", "Shiptracking","Shiplocation","Location","Proxy", "marinetraffic"]
authors = ["reyemb <info@reyemb.io>"]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = ">=1.3.4"
requests = ">=2.26.0"
lxml = ">=4.6.4"
tenacity = ">=8.0.1"
numpy = "^1.26.2"

[tool.poetry.dev-dependencies]
readme-renderer = ">=30.0"
jupyter = ">=1.0.0"
black = ">=22.12.0"
python-dotenv = ">=0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
